add responsive design to nav

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,9 @@
     @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-56 rounded;
   }
 }
+
+@layer utilities {
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+}
