--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,9 @@
     @apply flex items-center justify-center;
   }
 }
+
+@layer base {
+  body {
+    font-family: "Nunito Sans Variable", sans-serif;
+  }
+}
