--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
   .flex-center {
     @apply flex items-center justify-center;
   }
+  .btn-press-anim {
+    @apply transition active:scale-75;
+  }
 }
 
 @layer base {
